--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<form>
 			<div>
 				<span id="valeur"></span>
-				<span id="hexa">#FFFF</span>
+				<span id="hexa"></span>
 			</div>
 			<div class="red">
 				<label for="red">R</label>
